--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 body{
   font-family: 'Open Sans Condensed', sans-serif;
   padding: 20px 60px;
+  background-color :#FFD95C;
+  background-color :#ffdd6d;
 }
 
 a{
