--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,17 +1,18 @@
 .collection-item {
-    width: 22vw;
+    width: 18vw;
     display: flex;
     flex-direction: column;
     height: 350px;
     align-items: center;
     position:relative;
-  
     .image {
       width: 100%;
       height: 95%;
       background-size: cover;
       background-position: center;
       margin-bottom: 5px;
+      border:2px solid #000;
+  
     }
 
     .custom-button {
