--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,8 +7,8 @@
   
     .logo-container {
       height: 100%;
-      width: 70px;
-      padding: 25px;
+      width: 100px;
+      padding: 0px 0px 25px 0px;
     }
   
     .options {
